--- a/front-end/secao-01-javascript-testes-assincronos/ambiente-desenvolvimento/parte1/package.json
+++ b/front-end/secao-01-javascript-testes-assincronos/ambiente-desenvolvimento/parte1/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint-config-trybe-frontend": "^1.3.1",
+    "clipboard-copy": "^4.0.1",
+    "nanoid": "^4.0.0",
     "vite": "^4.0.4"
   },
   "devDependencies": {
