--- a/front-end/secao-01-javascript-testes-assincronos/js-async-promises-fetch/parte2/package.json
+++ b/front-end/secao-01-javascript-testes-assincronos/js-async-promises-fetch/parte2/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "eslint-config-trybe-frontend": "^1.3.1",
     "validator": "^13.7.0",
     "vite": "^4.0.4"
