--- a/front-end/secao-01-javascript-testes-assincronos/pratica-casa-cambio/package.json
+++ b/front-end/secao-01-javascript-testes-assincronos/pratica-casa-cambio/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sweetalert2/theme-dark": "^5.0.15",
     "eslint-config-trybe-frontend": "^1.3.1",
+    "jest": "^29.3.1",
     "sweetalert2": "^11.7.0",
     "validator": "^13.7.0",
     "vite": "^4.0.4"
